Fixed the bleeding problems

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ h1 {
 
 button {
     background: #6067ed;
-    border-radius: 15px;
+    border-radius: 7px;
     border: none;
     padding: 5px 10px;
     display: flex;
