--- a/src/Components/CreateAccount/createAccount.css
+++ b/src/Components/CreateAccount/createAccount.css
@@ -8,6 +8,21 @@
     
 }
 
+.pageWrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #ebe461;
+    padding: 2%;
+    border-radius: 15px;
+}
+
+.welcomeCreate{
+    display: flex;
+    justify-content: center;
+    margin: 2% 0;
+}
+
 .createInputsDiv {
     width: 100%;
     display: flex;
@@ -38,6 +53,9 @@
     justify-content: center;
     margin: 10% 0 0 0;
     
+}
+.createAccountButtons{
+    margin: 0 2%;
 }
 
 @media screen and (min-width: 1040px) {
