--- a/src/Components/S3Bucket/s3Bucket.css
+++ b/src/Components/S3Bucket/s3Bucket.css
@@ -18,7 +18,7 @@
 .inputfile + label {
     font-size: 15px;
     background: #6067ed;
-    border-radius: 15px;
+    border-radius: 7px;
     border: none;
     padding: 5px 10px;
     display: flex;
